# TaoAndXu

./: build.gradle  settings.gradle
myutils/: CMakeLists.txt  build.gradle
myutils/src/androidTest/java/com/share/myutils/: ExampleInstrumentedTest.java
myutils/src/main/: AndroidManifest.xml
myutils/src/main/aidl/org/opencv/engine/: OpenCVEngineInterface.aidl
myutils/src/main/cpp/: add.cpp  add.h
myutils/src/main/java/com/share/myutils/: MainActivity.java
myutils/src/main/java/com/share/myutils/download/: DownloadConstant.java  DownloadHelper.java  DownloadStatus.java  FileInfo.java
myutils/src/main/java/com/share/myutils/download/bean/: DownloadInfo.java  RequestInfo.java
myutils/src/main/java/com/share/myutils/download/config/: InnerConstant.java
myutils/src/main/java/com/share/myutils/download/db/: DbHolder.java  DbOpenHelper.java
myutils/src/main/java/com/share/myutils/download/execute/: DownloadExecutor.java  DownloadTask.java
myutils/src/main/java/com/share/myutils/download/service/: DownloadService.java
myutils/src/main/java/com/share/myutils/download/utils/: DebugUtils.java  LogUtils.java  ToastUtils.java
myutils/src/main/java/com/share/myutils/opencv/: a.java
myutils/src/main/java/com/share/myutils/opencv/android/: AsyncServiceHelper.java  BaseLoaderCallback.java  CameraBridgeViewBase.java  FpsMeter.java  InstallCallbackInterface.java  JavaCameraView.java  LoaderCallbackInterface.java  (+4 more)
myutils/src/main/java/com/share/myutils/utils/: PermissionUtils.java  Utils_Parse.java
myutils/src/test/java/com/share/myutils/: ExampleUnitTest.java
(+282 files in other folders)
